[package]
name = "devserver"
version = "0.4.3"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2021"
license = "Zlib"
repository = "https://github.com/kettle11/devserver"
readme = "README.md"
keywords = ["web", "server", "https", "http"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-server"]
description = "A simple server for locally hosting a folder."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = {version = "0.2.12", optional = true}
notify = "6.1"
sha-1 = "0.10"
base64 = "0.22"

[features]
default = ["https"]
https = ["dep:native-tls"]
